fix width of search bar on mobile

--- a/assets/sass/pages/_downloads.scss
+++ b/assets/sass/pages/_downloads.scss
@@ -233,8 +233,8 @@
 
 @media (max-width: $screen-xs-max) {
   #downloads-page {
-    .download-search {
-      input {
+    .downloads-inputs {
+      .downloads-search {
         width: 100%;
       }
     }
